crates/escalier_parser/src/snapshots/escalier_parser__tests__classes-8.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"class Foo { get foo() {} }\")"
---
Ok(
    Program {
        body: [
            ClassDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 26,
                    },
                },
                span: 0..26,
                ident: Ident {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 6,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 6..9,
                    name: "Foo",
                },
                class: Class {
                    ident: Ident {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 6,
                            },
                            end: Position {
                                line: 0,
                                column: 9,
                            },
                        },
                        span: 6..9,
                        name: "Foo",
                    },
                    body: [
                        Method(
                            ClassMethod {
                                key: Ident {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 16,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 19,
                                        },
                                    },
                                    span: 16..19,
                                    name: "foo",
                                },
                                kind: Getter,
                                lambda: Lambda {
                                    params: [],
                                    body: Block {
                                        span: 22..24,
                                        stmts: [],
                                    },
                                    is_async: false,
                                    return_type: None,
                                    type_params: None,
                                },
                                is_static: false,
                                is_mutating: false,
                            },
                        ),
                    ],
                    type_params: None,
                },
            },
        ],
    },
)
