crates/escalier_parser/src/snapshots/escalier_parser__tests__classes-9.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"class Foo { set foo(x) {} }\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 27,
                    },
                },
                span: 0..27,
                kind: ClassDecl(
                    ClassDecl {
                        ident: Ident {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 6,
                                },
                                end: Position {
                                    line: 0,
                                    column: 9,
                                },
                            },
                            span: 6..9,
                            name: "Foo",
                        },
                        class: Class {
                            ident: Ident {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 9,
                                    },
                                },
                                span: 6..9,
                                name: "Foo",
                            },
                            body: [
                                Method(
                                    ClassMethod {
                                        key: Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 16,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 19,
                                                },
                                            },
                                            span: 16..19,
                                            name: "foo",
                                        },
                                        kind: Setter,
                                        lambda: Lambda {
                                            params: [
                                                EFnParam {
                                                    pat: Pattern {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 20,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 21,
                                                            },
                                                        },
                                                        span: 20..21,
                                                        kind: Ident(
                                                            BindingIdent {
                                                                name: "x",
                                                                mutable: false,
                                                                span: 20..21,
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 20,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 21,
                                                                    },
                                                                },
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    type_ann: None,
                                                    optional: false,
                                                },
                                            ],
                                            body: Block(
                                                Block {
                                                    span: 23..25,
                                                    stmts: [],
                                                },
                                            ),
                                            is_async: false,
                                            return_type: None,
                                            type_params: None,
                                        },
                                        is_static: false,
                                        is_mutating: false,
                                    },
                                ),
                            ],
                            type_params: None,
                        },
                    },
                ),
            },
        ],
    },
)
