crates/escalier_parser/src/snapshots/escalier_parser__tests__classes.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"class Foo { a: number; }\")"
---
Ok(
    Program {
        body: [
            ClassDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 24,
                    },
                },
                span: 0..24,
                ident: Ident {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 6,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 6..9,
                    name: "Foo",
                },
                class: Class {
                    ident: Ident {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 6,
                            },
                            end: Position {
                                line: 0,
                                column: 9,
                            },
                        },
                        span: 6..9,
                        name: "Foo",
                    },
                    body: [
                        Prop(
                            ClassProp {
                                key: Ident {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 12,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 13,
                                        },
                                    },
                                    span: 12..13,
                                    name: "a",
                                },
                                value: None,
                                type_ann: Some(
                                    TypeAnn {
                                        kind: Keyword(
                                            KeywordType {
                                                keyword: Number,
                                            },
                                        ),
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 15,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 21,
                                            },
                                        },
                                        span: 15..21,
                                        inferred_type: None,
                                    },
                                ),
                                is_static: false,
                                is_optional: false,
                                is_mutable: false,
                            },
                        ),
                    ],
                    type_params: None,
                },
            },
        ],
    },
)
